--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
     "mapbox-gl": "^1.8.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
