--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.5.3",
     "mapbox-gl": "^1.8.1",
+    "max-char-ellipsis": "^1.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
