--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "react-scripts": "3.4.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
+  "lint-staged": {
+    "*.{js,css,scss,json,md}": "npm run format"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prepare": "husky install",
+    "format": "prettier --write \"src/**/*.{js,css,md}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +45,9 @@
     ]
   },
   "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.7.0",
     "sass": "^1.51.0"
   }
 }
